--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ebookjs",
+  "name": "xwing",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.4.0",
     "multer": "^1.4.5-lts.1",
-    "mysqldump": "^1.4.2",
+    "mysqldump": "^3.2.0",
     "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
